# dm-Reverse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  dm-reverse.mk
dm-Reverse.lv2/: dm-Reverse_dsp.ttl  manifest.ttl  modgui.ttl
docker/moddwarf/: Dockerfile
lv2/: Cargo.toml
lv2/dm-Reverse.lv2/: dm-Reverse.ttl  dm-Reverse_dsp.ttl  manifest.ttl
lv2/dm-Reverse.lv2/modgui/: stylesheet-dm-reverse.css
lv2/docker/modduo/: Dockerfile
lv2/docker/moddwarf/: Dockerfile
lv2/src/: lib.rs
profiling/: Cargo.toml
profiling/benches/: reverse_bench.rs
profiling/src/: main.rs
reverse/: Cargo.toml
reverse/src/: delay_line.rs  lib.rs  log_smooth.rs  lowpass.rs  mix.rs  one_pole_filter.rs  param_filter.rs  params.rs  phasor.rs  reverse.rs
scripts/: build-lv2-for-mod-desktop-mac.sh  build-vst-for-mac-m1.sh  build-vst-for-mac.sh  build-vst3-for-mac.sh  get-package-name.sh
src/reverse/: delay_line.rs  mod.rs  reverse.rs
vst/: Cargo.toml
vst/dm-Reverse.vst/Contents/: Info.plist
vst/dm-Reverse.vst/Contents/MacOS/: dm-Reverse
vst/src/: lib.rs  reverse_parameters.rs
