[package]
name = "dm_reverse"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"
reverse = { path = "../reverse" }

[lib]
crate-type = ["cdylib"]
